[gd_scene load_steps=2 format=3 uid="uid://mh03yg8k8ieq"]

[ext_resource type="Script" path="res://script/EditTask.gd" id="1_hnnys"]

[node name="EditTask" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hnnys")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeleteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "取消新建/删除工作"

[node name="CopyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "复制此工作"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "工作名："
fit_content_height = true

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "工作详情："
fit_content_height = true

[node name="CodeEdit" type="CodeEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
scroll_fit_content_height = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 1
text = "奖励："
fit_content_height = true

[node name="CodeEdit" type="CodeEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
placeholder_text = "奖励名<空格>数量，可写多行"
scroll_fit_content_height = true

[node name="VBoxContainer3" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
text = "紧迫程度："
fit_content_height = true

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
placeholder_text = "数字"
expand_to_text_length = true
virtual_keyboard_type = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
text = "类型："
fit_content_height = true

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "满足某条件时出现的工作"
popup/item_0/id = 0
popup/item_1/text = "有DDL的工作"
popup/item_1/id = 1

[node name="ConditionContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
text = "出现条件："
fit_content_height = true

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/HBoxContainer"]
layout_mode = 2
item_count = 5
selected = 0
popup/item_0/text = "仅今天(YYYY-MM-DD)"
popup/item_0/id = 0
popup/item_1/text = "从今天开始每X天"
popup/item_1/id = 1
popup/item_2/text = "从今天开始每周X"
popup/item_2/id = 2
popup/item_3/text = "每月第X天"
popup/item_3/id = 3
popup/item_4/text = "自定义"
popup/item_4/id = 4

[node name="Data1Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data1Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
text = "每多少天?"
fit_content_height = true

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data1Container"]
layout_mode = 2
placeholder_text = "天数，数字"
expand_to_text_length = true
virtual_keyboard_type = 2

[node name="Data2Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="CheckBox0" type="CheckBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data2Container"]
layout_mode = 2
text = "日"

[node name="CheckBox1" type="CheckBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data2Container"]
layout_mode = 2
text = "一"

[node name="CheckBox2" type="CheckBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data2Container"]
layout_mode = 2
text = "二"

[node name="CheckBox3" type="CheckBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data2Container"]
layout_mode = 2
text = "三"

[node name="CheckBox4" type="CheckBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data2Container"]
layout_mode = 2
text = "四"

[node name="CheckBox5" type="CheckBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data2Container"]
layout_mode = 2
text = "五"

[node name="CheckBox6" type="CheckBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data2Container"]
layout_mode = 2
text = "六"

[node name="Data3Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data3Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
text = "第几天?"
fit_content_height = true

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data3Container"]
layout_mode = 2
placeholder_text = "天数，数字"
expand_to_text_length = true
virtual_keyboard_type = 2

[node name="CodeEdit" type="CodeEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer"]
layout_mode = 2
scroll_fit_content_height = true

[node name="HBoxContainer5" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
text = "完成日期："
fit_content_height = true

[node name="CodeEdit" type="CodeEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/HBoxContainer5"]
layout_mode = 2
placeholder_text = "YYYY-MM-DD，可多行"
scroll_fit_content_height = true

[node name="PeriodContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
text = "起始日期："
fit_content_height = true

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "YYYY-MM-DD"
expand_to_text_length = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
text = "截止日期："
fit_content_height = true

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer2"]
layout_mode = 2
placeholder_text = "YYYY-MM-DD"
expand_to_text_length = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
text = "持续天数："
fit_content_height = true

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer3"]
layout_mode = 2
placeholder_text = "天数，数字"
expand_to_text_length = true
virtual_keyboard_type = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
text = "最后一天时的紧迫度："
fit_content_height = true

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer4"]
layout_mode = 2
placeholder_text = "数字"
expand_to_text_length = true
virtual_keyboard_type = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
text = "完成日期："
fit_content_height = true

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer5"]
layout_mode = 2
placeholder_text = "YYYY-MM-DD"
expand_to_text_length = true

[connection signal="pressed" from="VBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CopyButton" to="." method="_on_copy_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_name_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/CodeEdit" to="." method="_on_description_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer2/CodeEdit" to="." method="_on_reward_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer3/LineEdit" to="." method="_on_emergency_text_changed"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/HBoxContainer/OptionButton" to="." method="_on_condition_option_button_item_selected"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data1Container/LineEdit" to="." method="_on_data_1_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/Data3Container/LineEdit" to="." method="_on_data_3_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/CodeEdit" to="." method="_on_condition_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ConditionContainer/HBoxContainer5/CodeEdit" to="." method="_on_complete_dates_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer/LineEdit" to="." method="_on_start_date_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer2/LineEdit" to="." method="_on_end_date_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer3/LineEdit" to="." method="_on_last_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer4/LineEdit" to="." method="_on_end_emergency_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/PeriodContainer/HBoxContainer5/LineEdit" to="." method="_on_complete_date_text_changed"]
